[gd_scene load_steps=5 format=2]

[ext_resource path="res://Test.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Objects/Rock.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/WalkingPlayer/WalkingPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Ennemy/Ennemy.tscn" type="PackedScene" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Rock" parent="." instance=ExtResource( 2 )]
position = Vector2( 101.247, 89.9978 )

[node name="WalkingPlayer" parent="." instance=ExtResource( 3 )]
position = Vector2( 366.501, 185.273 )

[node name="Rock2" parent="." instance=ExtResource( 2 )]
position = Vector2( 821.407, 269.776 )

[node name="Ennemy" parent="." instance=ExtResource( 4 )]
position = Vector2( 140.867, 491.972 )

[node name="Ennemy2" parent="." instance=ExtResource( 4 )]
position = Vector2( 688.825, 237.378 )

[connection signal="hit" from="WalkingPlayer" to="." method="_on_WalkingPlayer_hit"]
[connection signal="rock_pick_up" from="WalkingPlayer" to="." method="_on_WalkingPlayer_rock_pick_up"]
